# clubfridge-kasse

./: .env.example  .gitignore  install.sh  kasse_local.db  main.py  pyproject.toml
app/: age_check.py  api_client.py  config.py  display_rotation.py  local_db.py  provision.py  sse_listener.py  sync.py
app/hardware/: barcode.py  lock.py  relay.py  rfid.py
app/ui/: app.py
app/ui/screens/: device_ident.py  idle.py  rotation.py  setup.py  shopping.py
deploy/: clubfridge-diag.sh  clubfridge-kasse.service  clubfridge-update.sh  clubfridge-update@.service  clubfridge-update@.timer  display-rotation-setup.sh
pi-gen-stage/: .gitignore  IMAGE-LICENSE.md  THIRD-PARTY-LICENSES.md  build-image.sh
pi-gen-stage/00-clubfridge/: 00-packages  00-run.sh
pi-gen-stage/00-clubfridge/files/: user-data
